[gd_scene load_steps=9 format=2]

[ext_resource path="res://content/caves/seedcave/SeedCave.gd" type="Script" id=1]
[ext_resource path="res://content/map/Parallaxer.gd" type="Script" id=2]
[ext_resource path="res://content/caves/seedcave/focus.png" type="Texture" id=3]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/caves/seedcave/seedcave-Sheet.png" type="Texture" id=5]
[ext_resource path="res://content/sounds/Amb/Garden subtle.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/caves/seedcave/seedcave_alpha_map_blurred.png" type="Texture" id=8]

[node name="SeedCave" type="Node2D" groups=["saveable", "unstyled"]]
z_index = -40
script = ExtResource( 1 )
biome = "green"

[node name="ExtraBackground" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = -2.0
margin_right = 63.0
margin_bottom = 50.0
mouse_filter = 2
color = Color( 0.0901961, 0.117647, 0.133333, 1 )

[node name="Sprites" type="Control" parent="."]
margin_right = 62.0
margin_bottom = 48.0
rect_clip_content = true
script = ExtResource( 2 )
start_offset = 0.4
scaling = 0.5

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 29, 24 )
texture = ExtResource( 5 )
hframes = 6

[node name="ExtraBackground" type="ColorRect" parent="Sprites/Sprite"]
margin_left = -47.0
margin_top = -34.0
margin_right = 43.0
margin_bottom = 34.0
mouse_filter = 2
color = Color( 0.270588, 0.254902, 0.156863, 1 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 29, 24 )
texture = ExtResource( 5 )
hframes = 6
frame = 1

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 29, 24 )
texture = ExtResource( 5 )
hframes = 6
frame = 2

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 29, 24 )
texture = ExtResource( 5 )
hframes = 6
frame = 3

[node name="ActiveSprite" type="Sprite" parent="Sprites/Sprite4"]
texture = ExtResource( 5 )
hframes = 6
frame = 4

[node name="FocusMarker" type="Sprite" parent="Sprites/Sprite4"]
position = Vector2( 5, 13 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="Sprites"]
position = Vector2( 29, 24 )
texture = ExtResource( 5 )
hframes = 6
frame = 5

[node name="Usable" parent="." instance=ExtResource( 4 )]
position = Vector2( 37, 38 )
visibleOnFocus = NodePath("../Sprites/Sprite4/FocusMarker")

[node name="AmbSound" parent="Usable" instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = 1.697
pitch_scale = 0.67
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 120.0
minAudibleDistance = 36.0
fadeInTime = 0.1
fadeOutTime = 3.0
loop = true

[node name="AlphaMap" type="Sprite" parent="."]
visible = false
position = Vector2( 31, 24 )
texture = ExtResource( 8 )
